; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5210/extr_ar5210_misc.c_ar5210GetRandomSeed.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5210/extr_ar5210_misc.c_ar5210GetRandomSeed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }

@AR_PHY_BASE = common dso_local global i64 0, align 8
@AR_TSF_U32 = common dso_local global i64 0, align 8
@AR_TSF_L32 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ar5210GetRandomSeed(%struct.ath_hal* %0) #0 {
  %2 = alloca %struct.ath_hal*, align 8
  %3 = alloca i32, align 4
  store %struct.ath_hal* %0, %struct.ath_hal** %2, align 8
  %4 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %5 = load i64, i64* @AR_PHY_BASE, align 8
  %6 = add nsw i64 %5, 100
  %7 = call i32 @OS_REG_READ(%struct.ath_hal* %4, i64 %6)
  %8 = ashr i32 %7, 19
  %9 = and i32 %8, 511
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = and i32 %10, 256
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = xor i32 %14, 511
  %16 = add nsw i32 %15, 1
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %13, %1
  %19 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %20 = load i64, i64* @AR_TSF_U32, align 8
  %21 = call i32 @OS_REG_READ(%struct.ath_hal* %19, i64 %20)
  %22 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %23 = load i64, i64* @AR_TSF_L32, align 8
  %24 = call i32 @OS_REG_READ(%struct.ath_hal* %22, i64 %23)
  %25 = xor i32 %21, %24
  %26 = load i32, i32* %3, align 4
  %27 = xor i32 %25, %26
  ret i32 %27
}

declare dso_local i32 @OS_REG_READ(%struct.ath_hal*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
